--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 allennlp==0.8.4
 anytree==2.6.0
 cython==0.29.1
-evalai==1.3.0
+evalai
 h5py==2.8.0
 mypy_extensions==0.4.1
 nltk==3.4.3
@@ -12,3 +12,5 @@ tensorboardX==1.7
 torch==1.1.0
 tqdm==4.28.1
 yacs==0.1.6
+overrides==3.1.0
+torchtext==0.2.3
